Fixed typo in worksheet

--- a/teaching.html
+++ b/teaching.html
@@ -145,7 +145,7 @@
 													<td>8</td>
 													<td>OOP and Orders of Growth</td>
 													<td>
-														<a href="61a/csmSp1wWeek8.pdf">Blank PDF</a>
+														<a href="61a/csmSp18week8.pdf">Blank PDF</a>
 														<a href="61a/csmSp18week8_sol.pdf">Solutions</a>
 													</td>
 												</tr>
