Updated teaching for Week 9 CSM

--- a/teaching.html
+++ b/teaching.html
@@ -117,8 +117,8 @@
 													<td>5</td>
 													<td>Tree Recursion and Data Abstraction</td>
 													<td>
-														<a href="61a/csmSp18Week5.pdf">Blank</a>
-														<a href="61a/csmSp18Week5Solutions.pdf">Sol</a>
+														<a href="61a/csmSp18Week5.pdf">Blank</a>,
+														<a href="61a/csmSp18Week5Solutions.pdf">Sol</a>,
 														<a href="https://www.youtube.com/watch?v=LGtai0ottUc">Video</a>
 
 													</td>
@@ -128,7 +128,7 @@
 													<td>6</td>
 													<td>Lists and Trees</td>
 													<td>
-														<a href="61a/csmSp18Week6.pdf">Blank PDF</a>
+														<a href="61a/csmSp18Week6.pdf">Blank PDF</a>,
 														<a href="61a/csmSp18week6_sol.pdf">Solutions</a>
 													</td>
 												</tr>
@@ -137,7 +137,7 @@
 													<td>7</td>
 													<td>Mutation and Nonlocal</td>
 													<td>
-														<a href="61a/csmSp18week7.pdf">Blank PDF</a>
+														<a href="61a/csmSp18week7.pdf">Blank PDF</a>,
 														<a href="61a/csmSp18week7_sol.pdf">Solutions</a>
 													</td>
 												</tr>
@@ -145,10 +145,24 @@
 													<td>8</td>
 													<td>OOP and Orders of Growth</td>
 													<td>
-														<a href="61a/csmSp18week8.pdf">Blank PDF</a>
+														<a href="61a/csmSp18week8.pdf">Blank PDF</a>,
 														<a href="61a/csmSp18week8_sol.pdf">Solutions</a>
 													</td>
 												</tr>
+												<tr>
+													<td>9</td>
+													<td>Linked Lists and Midterm Review</td>
+													<td>
+														<a href="61a/csmSp18week9.pdf">Blank PDF</a>,
+														<a href="61a/csmSp18week9_sol.pdf">Solutions</a> / 
+														<a href="61a/csmSp18week9_extra.pdf">Bonus PDF</a>,
+														<a href="61a/csmSp18week9_extra_sol.pdf">Bonus Sol</a>
+													</td>
+												</tr>
+												<tr>
+													<td>Midterm 2</td>
+													<td>Cumulative of all material</td>
+													<td>Good luck!</td>
 												<!--
 												<tr>
 													<td>9</td>
