Done guide to macros

--- a/teaching.html
+++ b/teaching.html
@@ -203,7 +203,7 @@
 													<td>Extra</td>
 													<td>Supplemental Macros Guide</td>
 													<td>
-														<a href="61a/csmSp18macros.pdf">TBD</a>
+														<a href="61a/csmSp18macros.pdf">PDF of Guide</a>
 													</td>
 												</tr>
 											</tbody>
