--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 								<header>
 									<h1>Bryan Tong</h1>
 									<p style="margin:0;">Co-founder of Whitespace AR</p>
-									<p style="margin:0;">CS61A &amp; CS61C Tutor @ UC Berkeley</p>
-									<p style="margin:0;">Former SWE Intern @ Nokia</p>
+									<p style="margin:0;">CS61A Course Staff @ UC Berkeley</p>
+									<p style="margin:0;">President of Virtual Reality @ Berkeley</p>
 								</header>
 								<!--<footer>
 									<ul class="actions">
@@ -146,9 +146,9 @@
 								<span class="image"><img src="images/vrab.png" alt="VRAB" /></span>
 								<div class="content">
 									<header>
-										<h3>Project Lead<br />Virtual Reality at Berkeley</h3>
+										<h3>President<br />Virtual Reality at Berkeley</h3>
 									</header>
-									<p>This semester, I took over as Project Lead for VR@B's Augmented Reality Textbooks project.  In the past, we brought a full-color, augmented reality version of <i>The Giving Tree</i> to life complete with animations and audio narriation.  Now, we're exploring cutting-edge AR with Tango and ARKit thanks to our sponsors ASUS and Carl Zeiss.</p>
+									<p>Last semester semester, I was Project Lead for VR@B's Augmented Reality Textbooks project.  In the past, we brought a full-color, augmented reality version of <i>The Giving Tree</i> to life complete with animations and audio narriation.  Now, I'm advancing onto President of VR@B, prioritizing our educational and consulting branches.</p>
 									<footer>
 										<ul class="actions">
 											<li><a href="http://vr.berkeley.edu/" class="button">Details</a></li>
