Summer 2018 website updates

--- a/projects.html
+++ b/projects.html
@@ -100,7 +100,7 @@
 									<header>
 										<h3>Project Lead<br />Virtual Reality at Berkeley</h3>
 									</header>
-									<p><i>September 2016 - present</i><br />Last semester, I took over as Project Lead for VR@B's Augmented Reality Textbooks project.  Using our engine for textbooks, we brought a full-color, augmented reality version of <i>The Giving Tree</i> to life complete with animations and audio narriation.</p>
+									<p><i>September 2016 - January 2018</i><br />Last semester semester, I was Project Lead for VR@B's Augmented Reality Textbooks project.  In the past, we brought a full-color, augmented reality version of <i>The Giving Tree</i> to life complete with animations and audio narriation.  Now, I'm advancing onto President of VR@B, prioritizing our educational and consulting branches.</p>
 									<footer>
 										<ul class="actions">
 											<li><a href="http://vr.berkeley.edu/" class="button">Details</a></li>
