--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 								<header>
 									<h1>Bryan Tong</h1>
 									<p style="margin:0;">Co-founder of Whitespace AR</p>
-									<p style="margin:0;">CS370 Head TA @ UC Berkeley</p>
+									<p style="margin:0;">CS370 Head of Software</p>
 									<p style="margin:0;">President of Virtual Reality @ Berkeley</p>
 								</header>
 								
@@ -125,9 +125,9 @@
 								<span class="image"><img src="images/cs370.png" alt="VRAB" /></span>
 								<div class="content">
 									<header>
-										<h3><em>Head TA</em><br />CS370, Summer 2018</h3>
+										<h3><em>Head of Software</em><br />CS370, Summer 2018</h3>
 									</header>
-									<p>This summer, I'm co-teaching and developing course software for CS370, one of two official CS pedagogy classes offered at UC Berkeley.  I'm working on a web-deployed scheduling app to match tutors to students, written with Python and Flask.  </p>
+									<p>This summer, I'm co-teaching and developing course software for CS370, one of two official CS pedagogy classes offered at UC Berkeley.  I'm working on web and course infrastructure, which includes a Flask site and an automated tutoring scheduler, built on PHP / MySQL / NGINX.  It includes Google API integration and UC Berkeley API interactions.</p>
 									<footer>
 										<ul class="actions">
 											<li><a href="http://vr.berkeley.edu/" class="button">Details</a></li>
