--- a/index.html
+++ b/index.html
@@ -131,7 +131,8 @@
 									This summer, I'm co-teaching and developing course software for CS370, one of two official CS pedagogy classes offered at UC Berkeley.  I'm working on web and course infrastructure, which includes a Flask site and an automated tutoring scheduler, built on PHP / MySQL / NGINX.  It includes Google API integration and UC Berkeley API interactions.</p>
 									<footer>
 										<ul class="actions">
-											<li><a href="http://vr.berkeley.edu/" class="button">Details</a></li>
+											<li><a href="http://inst.eecs.berkeley.edu/~cs370/" class="button">Course Website</a></li>
+											<li><a href="http://cs370scheduler.org/" class="button">Appointment Utility</a></li>
 										</ul>
 									</footer>
 								</div>
