--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 									<footer>
 										<ul class="actions">
 											<li><a href="http://inst.eecs.berkeley.edu/~cs370/" class="button">Course Website</a></li>
-											<li><a href="http://cs370scheduler.org/" class="button">Appointment Utility</a></li>
+											<li><a href="https://imgur.com/a/gPbwOkw" class="button">Samples</a></li>
 										</ul>
 									</footer>
 								</div>
