--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         						</script>
         					</em> I'm Bryan, a Bay Area native and current student at the University of California, Berkeley.  I've been dabbling in VR/AR, managment roles, and a lot of full-stack web dev.</p>
         					
-        					<p>Living and working in the local tech community is my dream, though I'd like to also run a boba cafe.  Sometimes, I upload nerdy stuff to my <a href="https://www.youtube.com/bryantongc" >YouTube channel</a> (now with over 39,000 views).
+        					<p>Living and working in the local tech community is my dream, though I'd like to also run a boba cafe.  Sometimes, I upload nerdy stuff to my <a href="https://www.youtube.com/bryantongc" >YouTube channel</a> (now with over 40,000 views).
         					
         					<footer>
 								<ul class="actions">
@@ -128,7 +128,7 @@
 										<h3><em>Co-Instructor</em><br />CS370, Fall 2018</h3>
 									</header>
 									<p><i>Co-Instructor - Fall 2018, Head of Software - Summer 2018.</i><br />
-									This summer, I'm co-teaching and developing course software for CS370, one of two official CS pedagogy classes offered at UC Berkeley.  I participate in teaching all four sections of the course, totaling 6 hours / week of instruction.  Our class notably also offers over ~3,600 hours of free one-on-one tutoring to UC Berkeley EE / CS students per semester.
+									CS 370: Introduction to Teaching Computer Science is one of two official CS pedagogy classes offered at UC Berkeley.  I co-teach all four lecture sections of the course, totaling 6 hours / week of live instruction.  Our class notably also offers over ~3,600 hours of free one-on-one tutoring to UC Berkeley EE / CS students per semester.  The EE/CS department uses metrics I gather via this course and tutoring feedback to hire potential TAs that I recommend, and first-time uGSIs are required to take this course.
 									<br /><br />
 									On the tech side, I'm working on web and course infrastructure, which includes a simple front-end site and an automated tutoring scheduler, built on PHP / MySQL / NGINX.  I've been porting it to a new, cleaner version written in React / Redux / Firebase as a replacement to the old REST stack. It includes Google API integration and UC Berkeley API interactions.</p>
 									<footer>
