--- a/index.html
+++ b/index.html
@@ -128,7 +128,9 @@
 										<h3><em>Co-Instructor</em><br />CS370, Fall 2018</h3>
 									</header>
 									<p><i>Co-Instructor - Fall 2018, Head of Software - Summer 2018.</i><br />
-									CS 370: Introduction to Teaching Computer Science is one of two official CS pedagogy classes offered at UC Berkeley.  I co-teach all four lecture sections of the course, totaling 6 hours / week of live instruction.  Our class notably also offers over ~3,600 hours of free one-on-one tutoring to UC Berkeley EE / CS students per semester.  The EE/CS department uses metrics I gather via this course and tutoring feedback to hire potential TAs that I recommend, and first-time uGSIs are required to take this course.
+									CS 370: Introduction to Teaching Computer Science is one of two official CS pedagogy classes offered at UC Berkeley.  I co-teach all four lecture sections of the course, totaling 6 hours / week of live instruction.
+									<br /><br />
+									Our class notably also offers over ~3,600 hours of free one-on-one tutoring to UC Berkeley EE / CS students per semester.  The EE/CS department uses metrics I gather via this course and tutoring feedback to hire potential TAs that I recommend, and first-time uGSIs are required to take this course.
 									<br /><br />
 									On the tech side, I'm working on web and course infrastructure, which includes a simple front-end site and an automated tutoring scheduler, built on PHP / MySQL / NGINX.  I've been porting it to a new, cleaner version written in React / Redux / Firebase as a replacement to the old REST stack. It includes Google API integration and UC Berkeley API interactions.</p>
 									<footer>
