--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
 									<footer>
 										<ul class="actions">
 											<li><a href="http://nokia.com/" class="button">Details</a></li>
+											<li><a href="geosphere.html" class="button">Sample</a></li>
 										</ul>
 									</footer>
 								</div>
