--- a/projects.html
+++ b/projects.html
@@ -64,7 +64,7 @@
 						<div class="inner">
 							<header>
 								<h2>Projects &amp; Experience</h2>
-								<p>A full list (of notable ones!)</p>
+								<p>(This was last updated in like... 2016)</p>
 							</header>
 							<section class="spotlight">
 								<span class="image"><img src="images/alexa.png" alt="Alexa Impressions" /></span>
