--- a/teaching.html
+++ b/teaching.html
@@ -65,7 +65,7 @@
 						<div class="content"
 							<header class="major" align="center">
 								<h1>Teaching</h1>
-								<p>This semester, I'm teaching CS 61A's small group sessions and tutoring CS 61C.</p>
+								<p>I now teach CS370, <a href="http://inst.eecs.berkeley.edu/~cs370/fa18/">check it out.</a></p>
 							</header>
 							</div>
 							<!-- Text -->
