Adding more demos

--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
 										<ul class="actions">
 											<li><a href="http://inst.eecs.berkeley.edu/~cs370/" class="button">Course Website</a></li>
 											<li><a href="https://imgur.com/a/gPbwOkw" class="button">Samples</a></li>
+											<li><a href="https://imgur.com/a/gPbwOkw" class="button">https://github.com/bbtong/cs370-react-scheduler/</a></li>
 										</ul>
 									</footer>
 								</div>
@@ -151,7 +152,8 @@
 									<p>I'm one of four co-founders and developers for Whitespace AR, a startup looking to revolutionize online canvas shopping with a personal, futuristic touch.  Available for iOS.</p>
 									<footer>
 										<ul class="actions">
-											<li><a href="http://trywhitespace.com/" class="button">Details</a></li>
+											<li><a href="https://imgur.com/a/87P2X5E" class="button">Still</a></li>
+											<li><a href="https://imgur.com/a/ZIy7Ha7" class="button">Proof-of-Concept</a></li>
 										</ul>
 									</footer>
 								</div>
