Fixed typo in jQuery

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
         <!-- Buttons! Yay buttons! -->
         <a class="button" href="/resume.pdf">Resume</a>
-        <a class="button" class="siding">Contact</a>
+        <a class="button" class="sliding">Contact</a>
       </div>
     </div>
   </div>
