--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
         <p>
           Incoming Software Engineer @ <span class="pivotal">Pivotal</span>
           <br />
-          Co-Instructor of <strong><font color="navyblue">CS</font></strong><font color="orange">370</font>, President of <font color="lightskyblue">VR@B</font>
+          Co-Instructor of <a href="https://inst.eecs.berkeley.edu/~cs370"><strong><font color="navyblue">CS</font></strong><font color="orange">370</font></a>, 
+          President of <a href="https://vr.berkeley.edu/"><font color="lightskyblue">VR@B</font></a>
         </p>
 
         <!-- Bio text -->
