--- a/cs184/final/index.html
+++ b/cs184/final/index.html
@@ -44,7 +44,19 @@
 						</p>
 						<p>
 						This is currently written up for our midway checkpoint.  We are slightly behind schedule, though believe we can finish our desired features in time. Below is what our research and analyses have yielded so far.  We forsee to have optimization struggles in the future.
-						</p> 
+						</p>
+						<p>
+						We have completed Week 1 and 2 on our planning document and are pursuing the Ball-Pivoting algorithm to proceed forward with the point-cloud mesh reconstruction.  We are currently implementing the capability to parse a point-cloud via a <code>.ply</code> file.  Afterwards, we will move on to being able to visually demonstrate capabilities of this algorithm and our mesh reconstructor.
+						</p>  
+					</section>
+
+					<section>
+						<h2>Milestone Video &amp; Slides</h2>
+						<ul>
+							<li><a href="">Link to Milestone Video</a></li>
+							<li><a href="">Link to Milestone Slides</a></li>
+						</ul>
+						</p>  
 					</section>
 
 					<section>
@@ -78,7 +90,7 @@
 
 					<!-- Image -->
 					<section>
-						<h2>Image</h2>
+						<h2>WIP FOR FINAL</h2>
 						<div class="box alt">
 							<div class="row gtr-uniform">
 								<div class="col-4"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
