--- a/cs184/final/index.html
+++ b/cs184/final/index.html
@@ -53,8 +53,8 @@
 					<section>
 						<h2>Milestone Video &amp; Slides</h2>
 						<ul>
-							<li><a href="">Link to Milestone Video</a></li>
-							<li><a href="">Link to Milestone Slides</a></li>
+							<li><a href="https://drive.google.com/file/d/1Xq09ZgZFtnMPY4KnVHt7Jy8bAd3EWUS3/view?usp=sharing">Link to Milestone Video</a></li>
+							<li><a href="https://docs.google.com/presentation/d/1oA5_Kdm1_Mr7cRVq4OKkyACLvG2flo8xYewyJjfquFg/edit?usp=sharing">Link to Milestone Slides</a></li>
 						</ul>
 						</p>  
 					</section>
