--- a/cs184/final/index.html
+++ b/cs184/final/index.html
@@ -37,6 +37,7 @@
 					<!-- Text -->
 					<section>
 						<h2>Abstract</h2>
+						<p>(Please refresh your cache if you have viewed this page before.)</p>
 						<p>Given a point cloud, how can we convert it into a mesh to create a model of the scanned object? With just a cloud of points it can be hard to tell what the points represent. By converting the point cloud into a mesh, we can visualize a 3D scan with much more clarity, especially if the point cloud is sparse or when zooming in on the point cloud. Additionally, even with a dense point cloud, it could be hard to tell where the surface is. 3D scanning is used in autonomous driving, mapping landscapes/terrain, architecture, and much more. For our final project we implemented surface reconstruction from a set of 3D points using the Ball-Pivoting Algorithm.
 						</p>
 						<p>
@@ -129,12 +130,9 @@
 								<div class="col-4"><span class="image fit"><video class="image fit" controls><source src="images/screenrec.mp4" type="video/mp4"></video>Cube, Code to Point Cloud</span></div>
 								<div class="col-4"><span class="image fit"><video class="image fit" controls><source src="images/brokenbpacube.mp4" type="video/mp4"></video>Broken BPA Cube Mesh Example </span></div>
 								<div class="col-4"><span class="image fit"><video class="image fit" controls><source src="images/brokenbpabody.mp4" type="video/mp4"></video>Colored Point Clouds</span></div>
-								<div class="col-4"><span class="image fit"><img src="images/pic03.jpg" alt="" />Mesh</span></div>
-								<div class="col-4"><span class="image fit"><img src="images/pic01.jpg" alt="" />Mesh</span></div>
-								<div class="col-4"><span class="image fit"><img src="images/pic02.jpg" alt="" />Mesh</span></div>
-								<div class="col-4"><span class="image fit"><img src="images/pic02.jpg" alt="" />Video</span></div>
-								<div class="col-4"><span class="image fit"><img src="images/pic03.jpg" alt="" />Video</span></div>
-								<div class="col-4"><span class="image fit"><img src="images/pic01.jpg" alt="" />Video</span></div>
+								<div class="col-4"><span class="image fit"><video class="image fit" controls><source src="images/goodbpacube.mp4" type="video/mp4"></video>Cube with BPA Mesh</span></div>
+								<div class="col-4"><span class="image fit"><video class="image fit" controls><source src="images/goodbpabody.mp4" type="video/mp4"></video>Body with BPA Mesh</span></div>
+								<div class="col-4"><span class="image fit"><video class="image fit" controls><source src="images/goodbpaaorta.mp4" type="video/mp4"></video>Aorta with BPA Mesh</span></div>
 							</div>
 						</div>
 					</section>
