--- a/cs184/final/index.html
+++ b/cs184/final/index.html
@@ -177,12 +177,8 @@
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="inner">
-					<section>
-						<h2>Midpoint Project - WIP</h2>
-					</section>
-					
 					<ul class="copyright">
-						<li>&copy; 2019</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; 2019</li><li>Web Template: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
