Added final video

--- a/cs184/final/index.html
+++ b/cs184/final/index.html
@@ -138,7 +138,15 @@
 					</section>
 
 					<section>
-						<h2>Milestone Video &amp; Slides &amp; Final Presentation</h2>
+						<h2>Final Video</h2>
+						<div class="box alt">
+							<video class="image fit" style="width:75%;" controls><source src="images/finalvid.mp4" type="video/mp4"></video>
+							
+						</div>
+					</section>
+
+					<section>
+						<h2>Milestones &amp; Final Presentation</h2>
 						<ul>
 							<li><a href="https://drive.google.com/file/d/1Xq09ZgZFtnMPY4KnVHt7Jy8bAd3EWUS3/view?usp=sharing">Link to Milestone Video</a></li>
 							<li><a href="https://docs.google.com/presentation/d/1oA5_Kdm1_Mr7cRVq4OKkyACLvG2flo8xYewyJjfquFg/edit?usp=sharing">Link to Milestone Slides</a></li>
